<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.makinul.bd.pass.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_nid_details"
            app:destination="@id/nid_details_fragment" />

        <action
            android:id="@+id/action_home_to_web_browser"
            app:destination="@id/web_fragment" />

        <action
            android:id="@+id/action_home_to_documents"
            app:destination="@id/documents_fragment" />

        <action
            android:id="@+id/action_home_to_personal"
            app:destination="@id/personal_fragment" />

        <action
            android:id="@+id/action_home_to_sim"
            app:destination="@id/sim_fragment" />

        <action
            android:id="@+id/action_home_to_finance"
            app:destination="@id/finance_fragment" />
    </fragment>

    <fragment
        android:id="@+id/web_fragment"
        android:name="com.makinul.bd.pass.ui.home.web.WebFragment"
        android:label="@string/title_web_browser"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nid_details_fragment"
        android:name="com.makinul.bd.pass.ui.home.nid_details.NidDetailsFragment"
        android:label="@string/title_nid_details"
        tools:layout="@layout/fragment_nid_details" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.makinul.bd.pass.ui.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.makinul.bd.pass.ui.home.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.makinul.bd.pass.ui.home.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/documents_fragment"
        android:name="com.makinul.bd.pass.ui.home.documents.DocumentsFragment"
        android:label="@string/title_documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/personal_fragment"
        android:name="com.makinul.bd.pass.ui.home.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/sim_fragment"
        android:name="com.makinul.bd.pass.ui.home.sim.SimFragment"
        android:label="@string/title_sim"
        tools:layout="@layout/fragment_sim" />

    <fragment
        android:id="@+id/finance_fragment"
        android:name="com.makinul.bd.pass.ui.home.finance.FinanceFragment"
        android:label="@string/title_finance"
        tools:layout="@layout/fragment_finance" />
</navigation>