<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.makinul.bd.pass.ui.auth.login.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_otp"
            app:destination="@id/otp_fragment" />

        <action
            android:id="@+id/action_login_to_registration"
            app:destination="@id/registration_fragment" />
    </fragment>

    <fragment
        android:id="@+id/registration_fragment"
        android:name="com.makinul.bd.pass.ui.auth.registration.RegistrationFragment"
        android:label="@string/registration_fragment"
        tools:layout="@layout/fragment_registration">

        <action
            android:id="@+id/action_registration_to_login"
            app:destination="@id/login_fragment" />

        <action
            android:id="@+id/action_registration_to_otp"
            app:destination="@id/otp_fragment" />

        <action
            android:id="@+id/action_registration_to_number"
            app:destination="@id/number_fragment" />
    </fragment>

    <fragment
        android:id="@+id/number_fragment"
        android:name="com.makinul.bd.pass.ui.auth.number.NumberFragment"
        android:label="@string/number_fragment"
        tools:layout="@layout/fragment_number">

        <action
            android:id="@+id/action_number_to_otp"
            app:destination="@id/otp_fragment" />
    </fragment>

    <fragment
        android:id="@+id/verification_fragment"
        android:name="com.makinul.bd.pass.ui.auth.verification.VerificationFragment"
        android:label="@string/verification_fragment"
        tools:layout="@layout/fragment_verification"/>

    <fragment
        android:id="@+id/otp_fragment"
        android:name="com.makinul.bd.pass.ui.auth.otp.OtpFragment"
        android:label="@string/otp_fragment"
        tools:layout="@layout/fragment_otp">

        <action
            android:id="@+id/action_otp_to_verification"
            app:destination="@id/verification_fragment" />
    </fragment>
</navigation>