<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bd_govt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/default_margin_small"
        android:gravity="center"
        android:text="@string/bd_govt"
        android:textSize="@dimen/app_body_text_size"
        app:drawableStartCompat="@drawable/ic_bd_govt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/national_id_card_with_value"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bd_govt"
        app:layout_constraintStart_toStartOf="@id/bd_govt"
        app:layout_constraintTop_toBottomOf="@id/bd_govt" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_very_small"
        android:text="@string/full_name_with_title_bangla"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_text_size"
        app:layout_constraintBottom_toTopOf="@id/father_name"
        app:layout_constraintStart_toStartOf="@id/father_name" />

    <TextView
        android:id="@+id/father_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_very_small"
        android:text="@string/father_name_with_title_bangla"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_text_size"
        app:layout_constraintBottom_toTopOf="@id/mother_name"
        app:layout_constraintStart_toStartOf="@id/mother_name" />

    <TextView
        android:id="@+id/mother_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_very_small"
        android:text="@string/mother_name_with_title_bangla"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_text_size"
        app:layout_constraintBottom_toTopOf="@id/date_of_birth"
        app:layout_constraintStart_toStartOf="@id/date_of_birth" />

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob_with_title"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/full_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_full_details_underline"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_small"
        android:src="@drawable/nid_user_pic"
        app:layout_constraintBottom_toTopOf="@id/full_details"
        app:layout_constraintEnd_toEndOf="@id/full_details"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>