<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tab_item_bg_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/components_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/nid_information"
            android:textColor="@color/components_color"
            android:textSize="@dimen/app_title_text_size" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/national_id_card"
        android:textColor="@color/black"
        android:textSize="@dimen/app_body_title_text_size"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/nid_number"
        app:layout_constraintStart_toStartOf="@id/nid_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nid_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="?android:attr/actionBarSize"
        android:gravity="start"
        android:text="@string/dummy_nid_number"
        android:textColor="@color/black"
        android:textSize="@dimen/app_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:src="@drawable/nid_user_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_info_lay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/nid_details_screen_bg"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/profile_pic">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/full_name_with_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintEnd_toStartOf="@id/full_name_bangla"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/full_name_bangla"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/full_name_with_title_bangla"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/full_name"
            app:layout_constraintTop_toTopOf="@id/full_name" />

        <TextView
            android:id="@+id/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/dob_with_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="@id/full_name"
            app:layout_constraintTop_toBottomOf="@id/full_name" />

        <TextView
            android:id="@+id/father_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/father_name_with_title_bangla"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="@id/date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/date_of_birth" />

        <TextView
            android:id="@+id/mother_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/mother_name_with_title_bangla"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="@id/father_name"
            app:layout_constraintTop_toBottomOf="@id/father_name" />

        <TextView
            android:id="@+id/blood_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/blood_group_with_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="@id/mother_name"
            app:layout_constraintTop_toBottomOf="@id/mother_name" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/address_with_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="@id/blood_group"
            app:layout_constraintTop_toBottomOf="@id/blood_group" />

        <TextView
            android:id="@+id/issue_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/doi_with_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="@id/address"
            app:layout_constraintTop_toBottomOf="@id/address" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>