<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin">

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_splash_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_icon" />

        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <TextView
            android:id="@+id/nid_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nid_number"
            android:textColor="@color/white"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_guideline" />

        <EditText
            android:id="@+id/nid_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_back"
            android:hint="@string/enter_your_nid_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/default_margin_small"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/nid_number_label" />

        <TextView
            android:id="@+id/dob_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/date_of_birth"
            android:textColor="@color/white"
            android:textSize="@dimen/app_body_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nid_number_edt" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/date_of_birth_format"
            android:padding="@dimen/default_margin_small"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/dob_label" />

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/white"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/remember_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/remember_me" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:background="@drawable/edit_text_back"
            android:padding="@dimen/default_margin"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="#ff0000"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/input_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".45" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>